removing underline from nav title, fixing container padding on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -110,6 +110,7 @@ body {
   font-size: 17px;
   font-family: Montserrat;
   font-weight: 700;
+  text-decoration: none;
 }
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>li>a {
   color: $blue;
@@ -248,7 +249,7 @@ h2 {
 /* main container, boostrap override */
 .container {
   @media (max-width: 495px) {
-    padding: 0 5px 0 0;
+    padding: 0 0 0 5px;
   }
 }
 
